--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:wght@300;500;600&display=swap" rel="stylesheet">
     
  <!-- CSS Apis -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../Real-Estate-Website/assets/css/styles.css">
  
  <!-- icon  api -->
-    <link rel="shortcut icon" href="/New_Project_Demo1/assets/imgs/analytics.svg">
+    <link rel="shortcut icon" href="../New_Project_Demo1/assets/imgs/analytics.svg">
  
  <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
  
  <!-- swiper css api -->
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+ <link rel="stylesheet" href="../Real-Estate-Website/assets/css/swiper-bundle.min.css"/>
 
 </head>
 
